--- a/.devcontainer/gcc-build/devcontainer.json
+++ b/.devcontainer/gcc-build/devcontainer.json
@@ -3,6 +3,10 @@
   "name": "gcc-build-env",
   "build": {
     "dockerfile": "Dockerfile",
+    "args": {
+      "RHEL8_ORG": "${localEnv:RHEL8_ORG}",
+      "RHEL8_ACTIVATION_KEY": "${localEnv:RHEL8_ACTIVATION_KEY}"
+    },
     "runArgs": [
       "--pull=never"
     ]
