--- a/.devcontainer/gcc-build/Dockerfile
+++ b/.devcontainer/gcc-build/Dockerfile
@@ -6,6 +6,19 @@ ARG RHEL8_ACTIVATION_KEY
 
 RUN subscription-manager register --org=$RHEL8_ORG --activationkey=$RHEL8_ACTIVATION_KEY
 
+# Install tools
+#
+# gcc-toolset-13 compiler
+# vim-enhanced for color vi support in git
+#
+RUN dnf update -y \
+  && dnf -y install \
+  gcc-toolset-13 \
+  git \
+  vim-enhanced \
+  && dnf clean all \
+  && rm -rf /var/cache/yum
+
 # Install root user .bashrc
 COPY .bashrc /root/
 
