🔧 Add overlay triplets support
Define in vcpkg configuration instead of relying
on a cmake variable being defined.

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -4,5 +4,8 @@
     "kind": "git",
     "repository": "https://github.com/microsoft/vcpkg",
     "baseline": "fba75d09065fcc76a25dcf386b1d00d33f5175af"
-  }
+  },
+  "overlay-triplets": [
+    "tools/vcpkg/triplets"
+  ]
 }
